# pytorch_llms

./: README.md  main.py  pyproject.toml  structure.txt  train_tiny_s6.py  transformer.py
configs/: base.yaml
configs/experiments/: transformer_small.yaml  transformer_tiny.yaml
models/: bert.py  gpt.py  s4d.py  s6.py  ssm.py  transformer.py
utils/: __init__.py  checkpoint.py  config.py  logging.py  run_dir.py  seed.py
